--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,8 @@
 {
-    "features": {
-        "ghcr.io/devcontainers/features/ruby:1.3.2": {
-            "version": "3.3.4"
-        }
+  "features": {
+    "ghcr.io/devcontainers/features/ruby:1.3.2": {
+      "version": "3.3.4"
     }
+  },
+  "postCreateCommand": "bundle install"
 }
